# repo-analyzer

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml
contrib/: install.sh
locales/: en.json
src/: cli.rs  i18n.rs  interner.rs  lib.rs  main.rs  messages.rs  quick_composition.rs  store.rs  types.rs
src/analysis/: line_classifier.rs  mod.rs  source_filter.rs
src/git/: diff.rs  mod.rs  walker.rs
src/langs/: data.rs  detection.rs  mod.rs
src/langs/detection/: patterns.rs  scoring.rs
src/metrics/: age.rs  authors.rs  bloat.rs  branches.rs  churn.rs  churn_pareto.rs  clones.rs  commit_size.rs  commit_velocity.rs  complexity.rs  composition.rs  construct_churn.rs  construct_ownership.rs  coupling.rs  dead_code.rs  debt_markers.rs  doc_coverage.rs  fan_in_out.rs  half_life.rs  hotspots.rs  knowledge_silos.rs  large_sources.rs  mod.rs  module_coupling.rs  outliers.rs  ownership.rs  patterns.rs  quality.rs  succession.rs  test_ratio.rs
src/output/: csv_output.rs  html.rs  json.rs  mod.rs  terminal.rs
src/parser/: mod.rs  registry.rs
src/parser/languages/: bash.rs  cpp.rs  csharp.rs  css.rs  dart.rs  go_lang.rs  html_lang.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  swift.rs  typescript.rs
src/pipeline/: engine.rs
src/scoring/: health.rs  mod.rs
templates/: report.html
tests/: cli_test.rs
types/: helpers.ts  report.d.ts
