[package]
name = "repo-analyzer"
version = "0.1.2"
edition = "2024"
description = "Git repository analysis tool with code-construct-level granularity"

[dependencies]
# Git
gix = { version = "0.81", features = ["blocking-network-client", "blob-diff", "blame"] }

# Parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-scala = "0.25"
tree-sitter-swift = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
csv = "1"

# Output
comfy-table = "7"
indicatif = "0.17"

# Pipeline
crossbeam-channel = "0.5"
rayon = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"
regex = "1.12.3"

# Disk-backed change store — spills collector aggregation state to a temp
# SQLite database so memory stays bounded on huge repos.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
