[package]
name = "repo-analyzer"
version = "0.1.16"
edition = "2024"
description = "Git repository analysis tool with code-construct-level granularity"

[dependencies]
# Git
gix = { version = "0.83", features = ["blocking-network-client", "blob-diff", "blame"] }

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-php = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-scala = "0.26"
tree-sitter-swift = "0.7"
tree-sitter-javascript = "0.25"
tree-sitter-dart = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
csv = "1"

# Output
comfy-table = "7"
indicatif = "0.18"

# Pipeline
crossbeam-channel = "0.5"
rayon = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"
regex = "1.12.3"

# Disk-backed change store — spills collector aggregation state to a temp
# SQLite database so memory stays bounded on huge repos.
rusqlite = { version = "0.39", features = ["bundled"] }

# Language detection / line classification (see `src/langs`, `src/analysis`).
# Detection is delegated to `linguist` (GitHub Linguist data, MIT). Codestats'
# `Language` table (languages.json5) is still used for line classification —
# we map Linguist's name back to a codestats entry so comment/blank counting
# keeps the 460-language coverage.
aho-corasick = "1.1"
linguist = "0.1"
memchr = "2.8"

# Sharded concurrent map — used by the string interner so all rayon workers
# can intern file paths and author emails without fighting over a single
# global Mutex.
dashmap = "6"

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
json5 = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
